# 2d-grid

./: .gitignore  README.md  deps.toml
.github/workflows/: build_linux.yml
src/: CMakeLists.txt
src/include/grid-2d/: grid_2d.h
src/lib/: grid_2d.c
